// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListDividedItem should render an ListDividedItem 1`] = `
<DocumentFragment>
  <li
    class="flex flex-col w-full "
    data-testid="list-divided-item__wrapper"
  >
    <div
      class="flex justify-between items-center"
      data-testid="list-divided-item__inner-wrapper"
    >
      <div
        class="flex flex-col space-y-2 w-full"
      >
        <div
          class="flex justify-between items-center space-x-5"
        >
          <span
            class="text-lg font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
            data-testid="list-divided-item__label"
          />
        </div>
      </div>
    </div>
  </li>
</DocumentFragment>
`;

exports[`ListDividedItem should render as floating label 1`] = `
<DocumentFragment>
  <li
    class="flex flex-col w-full "
    data-testid="list-divided-item__wrapper"
  >
    <div
      class="flex justify-between flex-col items-start"
      data-testid="list-divided-item__inner-wrapper"
    >
      <div
        class="flex flex-col space-y-2 w-full"
      >
        <div
          class="flex justify-between items-center space-x-5"
        >
          <span
            class="text-lg font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
            data-testid="list-divided-item__label"
          />
        </div>
      </div>
    </div>
  </li>
</DocumentFragment>
`;

exports[`ListDividedItem should render the content 1`] = `
<DocumentFragment>
  <li
    class="flex flex-col w-full "
    data-testid="list-divided-item__wrapper"
  >
    <div
      class="flex justify-between items-center"
      data-testid="list-divided-item__inner-wrapper"
    >
      <div
        class="flex flex-col space-y-2 w-full"
      >
        <div
          class="flex justify-between items-center space-x-5"
        >
          <span
            class="text-lg font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
            data-testid="list-divided-item__label"
          />
        </div>
      </div>
    </div>
    <div
      class=""
      data-testid="list-divided-item__content"
    >
      Content
    </div>
  </li>
</DocumentFragment>
`;

exports[`ListDividedItem should render the label 1`] = `
<DocumentFragment>
  <li
    class="flex flex-col w-full "
    data-testid="list-divided-item__wrapper"
  >
    <div
      class="flex justify-between items-center"
      data-testid="list-divided-item__inner-wrapper"
    >
      <div
        class="flex flex-col space-y-2 w-full"
      >
        <div
          class="flex justify-between items-center space-x-5"
        >
          <span
            class="text-lg font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
            data-testid="list-divided-item__label"
          >
            Label
          </span>
        </div>
      </div>
    </div>
  </li>
</DocumentFragment>
`;

exports[`ListDividedItem should render the labelDescription 1`] = `
<DocumentFragment>
  <li
    class="flex flex-col w-full "
    data-testid="list-divided-item__wrapper"
  >
    <div
      class="flex justify-between items-center"
      data-testid="list-divided-item__inner-wrapper"
    >
      <div
        class="flex flex-col space-y-2 w-full"
      >
        <div
          class="flex justify-between items-center space-x-5"
        >
          <span
            class="text-lg font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
            data-testid="list-divided-item__label"
          />
        </div>
        <span
          class="text-sm font-medium text-theme-secondary-500 dark:text-theme-secondary-700"
          data-testid="list-divided-item__label--description"
        >
          Label Desc
        </span>
      </div>
    </div>
  </li>
</DocumentFragment>
`;

exports[`ListDividedItem should render the value 1`] = `
<DocumentFragment>
  <li
    class="flex flex-col w-full "
    data-testid="list-divided-item__wrapper"
  >
    <div
      class="flex justify-between items-center"
      data-testid="list-divided-item__inner-wrapper"
    >
      <div
        class="flex flex-col space-y-2 w-full"
      >
        <div
          class="flex justify-between items-center space-x-5"
        >
          <span
            class="text-lg font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
            data-testid="list-divided-item__label"
          />
        </div>
      </div>
      <div
        class=""
      >
        <span
          data-testid="list-divided-item__value"
        >
          Value
        </span>
      </div>
    </div>
  </li>
</DocumentFragment>
`;

exports[`ListDividedItem should render with labelAddon 1`] = `
<DocumentFragment>
  <li
    class="flex flex-col w-full "
    data-testid="list-divided-item__wrapper"
  >
    <div
      class="flex justify-between items-center"
      data-testid="list-divided-item__inner-wrapper"
    >
      <div
        class="flex flex-col space-y-2 w-full"
      >
        <div
          class="flex justify-between items-center space-x-5"
        >
          <span
            class="text-lg font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
            data-testid="list-divided-item__label"
          />
          <span>
            <span>
              Test
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class=""
      data-testid="list-divided-item__content"
    >
      Content
    </div>
  </li>
</DocumentFragment>
`;
